tests/parser/logic-and-error.stderr
error: expected expression
 --> $DIR/logic-and-error.lox:1:10
  |
1 | true and /;
  |          ^
